# dangerengine

./: .CMakeLists.txt.swp  .README.md.swp  .bowerrc  .clang-format  .gitignore  .gitmodules  .tags  .tags_sorted_by_file  .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  authors.md  bower.json  dangerbird_bin.vcxproj  dangerbird_bin.vcxproj.filters  dangerbird_c_tests.vcxproj  dangerbird_c_tests.vcxproj.filters  dangerbird_test.vcxproj  dangerbird_test.vcxproj.filters  dangerengine.el  dangerengine.sdf  dangerengine.sln  dangerengine.vcxproj  dangerengine.vcxproj.filters  doc.vcxproj  doc.vcxproj.filters  doxyfile.in  em.js.post  (+4 more)
demos/: demo_2.c  demo_2.h  earth.c  earth.h  exec.c  lab2-demo.c  lab2-demo.c.c  lab2-demo.c.h  lab2-demo.h  objc-demo.m  pong_demo.c  pong_demo.h  render_demo.c  render_demo.h  slsTank.c  slsTank.h  sphere.c  sphere.h  tile_map.c  tile_map.h
dummyclang/: dummyclang.cpp  dummyclang.h  dummyclang.vcxproj  dummyclang.vcxproj.filters
gameProto/: functional.lua  main.lua
jsbuild/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  TryRunResults.cmake  app.js  appSetup.js  dangerbird_bin.js  dangerbird_bin.js.map  em.js.post  em.js.pre  index.html
jsbuild/shaders/: default.vert.glsl
resources/: em_build.pre.js  foo.js  index.html  pg6626.epub  sheet_tanks.xcf  style.css
resources/.ipynb_checkpoints/: imgkernels-checkpoint.ipynb
resources/art/: barrelBeige_outline.xcf  tankBeige_outline.xcf
resources/shaders/: debug.frag  debug.vert  default-legacy.frag  default.frag  default.vert  default.vert.glsl  demo.frag  demo.fs  demo.vert  demo.vs  demo_uniforms.glsl  earth.frag  earth.vert  earth_uniforms.glsl  lab.vert  normal_visualizer.geom  postprocess.frag  postprocess.vert  sun.frag  sun.vert  ui.frag  ui.vert  uniforms.glsl
src/: .tags  .tags_sorted_by_file  config.h.in  contexthandlers.c  contexthandlers.h  cppapi.h  dangerengine.h  exec.c  sls-build-dir.c.in  sls-build-dir.h  sls-commonlibs.h  sls-gl.h  sls-handlers.c  sls-imagelib.h  slscontext.c  slscontext.h  slserrcode.c  slserrcode.h  slserror.c  slserror.h  slsloop.c  slsloop.h  slsmacros.h  slsutils.c  slsutils.h  slsworkqueue.c  slsworkqueue.h
src/client/: ClientContext.c  ClientContext.h  main.c
src/cxx/: cxx_interop.h  overloads.h
src/data-types/: CMakeLists.txt  array.c  array.h  btree.c  btree.h  callbacks.c  callbacks.h  dangertypes.h  data-types.h  hashtable.c  hashtable.h  intrusivelist.h  iterator.c  iterator.h  linkedlist.c  linkedlist.h  ptrarray.c  ptrarray.h  slsPool.c  slsPool.h  slsPool_p.h  slsutils.h
src/ecs/: slsWorld.c  slsWorld.h
src/emscripten/: module.pre.js
src/math/: math-operations.h  math-types.c  math-types.h  mathmacs.c  mathmacs.h  slsCamera.c  slsCamera.h  slsMathUtils.c  slsMathUtils.h  slsMatrixStack.c  slsMatrixStack.h  slsSimd.c  slsSimd.h  slsTrackball.c  slsTrackball.h  slsTransform.c  slsTransform.h  slsTransform2D.c  slsTransform2D.h  slsTransform3D.c  slsTransform3D.h  slsTransform_private.h
src/objc/: CMakeLists.txt  DangerEngineFW.h  SLSAppState.h  SLSAppState.m  SLSContext.h  SLSContext.m
src/renderer/: .tags  .tags_sorted_by_file  constants.cc  geometries.c  geometries.h  nuklear.c  shaderutils.c  shaderutils.h  sls-nuklear.h  slsDebugDraw.c  slsDebugDraw.h  slsLight.c  slsLight.h  slsLocationTable.c  slsLocationTable.h  slsSprite.c  slsSprite.h  slsSpriteRenderer.c  slsSpriteRenderer.h  slsTTFText.c  slsTTFText.h  slsbatch.c  slsbatch.h  slsmaterial.c  slsmaterial.h  slsmesh.c  slsmesh.h  slsmodel.c  slsmodel.h  slsrender.c  slsrender.h  slsshader.c  slsshader.h  slsshadertable.c  slsshadertable.h  slssprite.c  slssprite.h  slstexture.c  slstexture.h
src/resource/: slsmanager.c  slsmanager.h
src/scene/: slsCamera.c  slsCamera.h  slsgraph.c  slsgraph.h
src/shader/: shader-utils.c  shader-utils.h
src/state/: README.md  resourceutils.c  resourceutils.h  slsAppState.c  slsAppState.h  slsBehavior.c  slsBehavior.h  slsEntity.c  slsEntity.h  slsEntityDraw.c  slsEntityDraw.h  slsEvent.c  slsEvent.h  slsInputState.c  slsInputState.h  slsPhysics.c  slsPhysics.h  slsRenderList.c  slsRenderlist.h  slsSprite.c  slsSprite.h
tests/: LocationTableTests.cc  array-tests.cc  btree_test.cc  c_cases.c  c_cases.h  ecs-tests.cc  error-tests.c  hash-tests.cc  image_tests.cc  list-tests.cc  main-tests.c  main.cc  math-tests.c  math_tests.cc  minunit-runner.cc  pool-tests.cc  ptrarray-tests.cc  render_tests.cc  shader_tests.cc  test-utils.h  testing.h  utiltests.cc  workqueue_tests.cc
tests/data-types/: array-tests.cc  data-tests.c  data-tests.h  hash-tests.cc  list-tests.cc  pool-tests.cc  ptrarray-tests.cc
vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  dangerbird_bin.vcxproj  dangerbird_bin.vcxproj.filters  dangerbird_test.vcxproj  dangerbird_test.vcxproj.filters  dangerengine.sln  dangerengine.vcxproj  dangerengine.vcxproj.filters
vs14/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  dangerbird_bin.vcxproj  dangerbird_bin.vcxproj.filters  dangerbird_c_tests.vcxproj  dangerbird_c_tests.vcxproj.filters  dangerbird_test.vcxproj  dangerbird_test.vcxproj.filters  dangerengine.sln  dangerengine.vcxproj  dangerengine.vcxproj.filters  packages.config
vs14/resources/: appSetup.js
xcode/: .gitignore  CPackConfig.cmake  CPackSourceConfig.cmake  Doxyfile
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo  (+10 more)
xcode/resources/: appSetup.js  (+1 more)
(+31 files in other folders)
